# gcs_gcp

./: .gcloudignore  .gitignore
builders/packer/: Makefile
code/: pyproject.toml  setup.cfg
code/src/gcsgcp/: __init__.py
packer/: README.md  cloudbuild.yaml  code_bootstrap.sh  globus.pkr.hcl  port80_index.html
packer/auditd_rules/: 000-README.rules  001-basic-config.rules  003-dont-audit.rules  004-local.rules  005-kernel-modules.rules  010-authentication.rules  020-system.rules  025-code-injection.rules  030-dateAndTime.rules  035-files.rules  040-fs-mounts.rules  045-puppet_files.rules  055-susp-activity.rules  060-network.rules  065-cron.rules  070-root-command_exec.rules  075-32bit-syscall.rules
packer_builder/: Dockerfile  README.md  cloudbuild.yaml
terraform/: common.tf  gcp_common.tf
terraform/gcs/: common.tf  dtn.tf  management.tf
terraform/gcs/sa_common/: common.tf
terraform/packer/: cloudbuild.tf  common.tf  functions.tf  packer.tf
