# vim: ts=4 sw=4 et

[build-system]
requires = [
  "setuptools >= 62.1.0",
  "wheel >= 0.37.1",
]
build-backend = "setuptools.build_meta"

[[project.authors]]
"name" = "SRCC"
"email" = "srcc-support@stanford.edu"

[project]
name = "gcsgcp"
version = "0.0.1"
description = "gcsgcp"
readme = { file = "README.md", content-type = "text/markdown" }

requires-python = ">=3.7"
dependencies = [
    "globus-sdk >=2.0.1, <3.0",
    "google-auth >=1.30, <2.0",
    "google-cloud-secret-manager >=2.4.0, <3.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
gcsgcp-hello = "gcsgcp:hello"
