# vim: ts=4 sw=4 et

[metadata]
name = gcsgcp
version = 0.0.1
author = SRCC
author_email = srcc-support@stanford.edu
description = gcsgcp
long_description: file: README.md
long_description_content_type = text/markdown

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    globus-sdk>=2.0.1<3.0
    google-auth>=1.30<2.0
    google-cloud-secret-manager>=2.4.0<3.0

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    gcsgcp-hello = gcsgcp:hello
